# teperunner

./: .gitignore  Makefile  compose.yml  input.txt  manage.py  requirements.txt
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_log_ip.py
main/templates/: base.html  main.html
sda_runner_api/: asgi.py  settings.py  urls.py  wsgi.py
teperunner-main/: package.json  pnpm-lock.yaml  vite.config.ts
teperunner-main/app/: app.css  root.tsx
teperunner-main/app/components/context/: theme-provider.tsx
teperunner-main/app/components/ui/: ThemeToggler.tsx  app-sidebar.tsx  button.tsx  checkbox.tsx  command.tsx  data-table.tsx  popover.tsx  sidebar.tsx
teperunner-main/app/lib/: auth.server.ts
teperunner-main/app/lib/asset/: asset.ts
teperunner-main/app/modules/LandingModule/: index.tsx
teperunner-main/app/modules/LoginModule/: index.tsx  loader.ts
teperunner-main/app/routes/: _page.tsx  api.auth.$.ts
teperunner-worker/: Cargo.toml  Dockerfile
teperunner-worker/src/: .env.example  conn.rs  main.rs  schema.rs
