[package]
name = "teperunner-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo-watch = "8.5.3"
dotenvy = "0.15.7"
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
